[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Unlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://License.tscn" type="PackedScene" id=3]
[ext_resource path="res://Profiles.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="P" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VB" type="VBoxContainer" parent="P"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="License" parent="P/VB" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 484.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unlock" parent="P/VB" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 484.0
margin_bottom = 484.0
size_flags_vertical = 3

[node name="Profiles" parent="P/VB" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 384.0
margin_bottom = 384.0
size_flags_vertical = 3

[node name="Downloading" type="VBoxContainer" parent="P/VB"]
visible = false
margin_right = 484.0
margin_bottom = 484.0
size_flags_vertical = 3

[node name="C1" type="Control" parent="P/VB/Downloading"]
margin_right = 484.0
margin_bottom = 231.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="P/VB/Downloading"]
margin_top = 235.0
margin_right = 484.0
margin_bottom = 249.0
text = "Downloading..."
align = 1

[node name="C2" type="Control" parent="P/VB/Downloading"]
margin_top = 253.0
margin_right = 484.0
margin_bottom = 484.0
size_flags_vertical = 3

[node name="FirstTimeDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
dialog_text = "No profiles found, create a new password."

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true

[node name="OnetunDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true
window_title = "Onetun not found"
dialog_text = "Onetun not found, do you want to download it?"

[node name="OnetunDownload" type="HTTPRequest" parent="."]
download_file = "user://onetun.exe"

[connection signal="on_accept" from="P/VB/License" to="." method="_on_License_on_accept"]
[connection signal="on_cancel" from="P/VB/License" to="." method="_on_License_on_cancel"]
[connection signal="on_login" from="P/VB/Unlock" to="." method="_on_Unlock_on_login"]
[connection signal="on_change" from="P/VB/Profiles" to="." method="_on_Profiles_on_change"]
[connection signal="confirmed" from="OnetunDialog" to="." method="_on_OnetunDialog_confirmed"]
[connection signal="request_completed" from="OnetunDownload" to="." method="_on_OnetunDownload_request_completed"]
